--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,8 +1,9 @@
-@import "colors";
+@import 'colors';
 
 .navbar {
-  height: 104px;
   background-color: $color-background;
+
+  padding: 52px 16px;
 
   .router-link-exact-active {
     color: $text-primary;
@@ -32,6 +33,17 @@
 
     .btn {
       min-width: 145px;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .nav-link {
+    &.router-link-exact-active {
+      border-bottom: 0;
+      border-left: 3px solid #0066f9;
+      padding-left: 10px !important;
+      vertical-align: middle;
     }
   }
 }
@@ -69,7 +81,7 @@
 
   .dropdown-item {
     border-bottom: 1px solid #b3bac7;
-    padding: .55rem 1.5rem;
+    padding: 0.55rem 1.5rem;
 
     .icon {
       margin-right: 8px;
