--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   background-color: $color-background;
-  padding: 22px 16px;
+  padding: 22px 0;
 
   .router-link-exact-active {
     color: $text-primary;
@@ -36,12 +36,12 @@
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .nav-link {
     &.router-link-exact-active {
       border-bottom: 0;
       border-left: 3px solid #0066f9;
-      padding-left: 10px !important;
+      padding-left: 13px !important;
       vertical-align: middle;
     }
   }
