--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,11 +1,12 @@
 @import 'colors';
 
-$nav-expanded-padding: 40px;
-$navitem-expanded-padding: $nav-expanded-padding - 16px;
+$nav-standard-padding: 1.375rem;
+$nav-expanded-padding: 2.5rem;
+$navitem-expanded-padding: 1.5rem;
 
 .navbar {
   background-color: $color-background;
-  padding: 22px 0;
+  padding: 1.375rem 0;
 
   .router-link-exact-active {
     color: $text-primary;
@@ -68,7 +69,7 @@ $navitem-expanded-padding: $nav-expanded-padding - 16px;
 
   .dropdown-header {
     border-bottom: 1px solid #b3bac7;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
     color: $text-primary;
   }
@@ -95,7 +96,7 @@ $navitem-expanded-padding: $nav-expanded-padding - 16px;
 }
 
 .navbar {
-  padding: 22px 0;
+  padding: 1.375rem 0;
 }
 
 @media (min-width: 576px) {
