--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -24,7 +24,7 @@ $navitem-expanded-padding: 1.5rem;
   .navbar-nav {
     .nav-link {
       color: $text-primary;
-      padding: 0 0 7.5px 0;
+      padding: 0 0 0.5rem 0;
       box-sizing: border-box;
       margin: 0 40px 0 0;
       font-weight: 400;
@@ -116,20 +116,20 @@ $navitem-expanded-padding: 1.5rem;
 
 @media (max-width: 767px) {
   .nav-item {
-    margin-bottom: 0.5rem;
-  }
+    margin-bottom: 1rem;
 
-  .nav-link {
-    padding-left: 16px;
+    .nav-link {
+      padding: 0 0 0 16px;
 
-    &.router-link-exact-active {
-      border-bottom: 0;
-      border-left: 3px solid #0066f9;
-      padding-left: 13px !important;
-      vertical-align: middle;
+      &.router-link-exact-active {
+        border-bottom: 0;
+        border-left: 3px solid #0066f9;
+        padding-left: 13px !important;
+        vertical-align: middle;
+      }
+
+      padding: inherit;
     }
-
-    padding: inherit;
   }
 
   .navbar-brand {
