Tweaked button style according to design

--- a/src/scss/entry.scss
+++ b/src/scss/entry.scss
@@ -31,3 +31,7 @@ a {
   background-color: $color-primary;
   border: 1px solid darken($color-primary, 5%);
 }
+
+.btn {
+  border-radius: 0.1rem;
+}
