--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -2,6 +2,7 @@ $color-primary: #0066f9;
 $color-background: #eff1f5;
 
 $text-primary: #041433;
+$text-muted: #6c757d;
 
 @mixin shadow-bottom {
   box-shadow: 0px 1px 2px 0px #dfe3ec;
