--- a/src/scss/entry.scss
+++ b/src/scss/entry.scss
@@ -23,6 +23,14 @@ h6 {
   font-weight: 600;
 }
 
+h6.muted {
+  color: #6c757d;
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 1.5rem;
+  font-size: 1rem;
+}
+
 a {
   color: $color-primary;
 }
