Styled button links inside nav dropdowns

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,4 +1,4 @@
-@import 'colors';
+@import "colors";
 
 $nav-standard-padding: 1.375rem;
 $nav-expanded-padding: 2.5rem;
@@ -178,6 +178,11 @@ $navitem-expanded-padding: 1.5rem;
       img {
         margin-right: 1em;
       }
+    }
+
+    .btn-link {
+      padding: 0;
+      color: $text-primary;
     }
   }
 }
