Button links inside nav now have 0px min width

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -183,6 +183,7 @@ $navitem-expanded-padding: 1.5rem;
     .btn-link {
       padding: 0;
       color: $text-primary;
+      min-width: 0px;
     }
   }
 }
